@@ -1,5 +1,6 @@
 0.9.14
 * Qdb: Uses malloc() and free() from libc, to optimize usage of system memory (skips garbage collector)
+* Improved statistics page of WebUI and renamed from Stats to Counts
 
 0.9.13 - 2014-05-10 (1.0.0-rc1)
 * Huge refactor of the entire repo
